# html-slides-to-pdf

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  html_to_pdf.py  pyproject.toml  requirements-web.txt  requirements.txt
.github/workflows/: ci.yml
deploy/: html-slides-to-pdf.user.service
docs/: index.html
examples/slides/: mobile-ai-runtime.html
scripts/: generate_readme_previews.py  install_linux_cjk_fonts.sh  sync_docs_ui.sh
web/: __init__.py  __main__.py  app.py
