[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "html-slides-to-pdf"
version = "0.2.0"
description = "Agent-first: SKILL.md at repo root + CLI to export HTML slide decks to multi-page PDF (Playwright Chromium + pypdf). For Cursor, Claude Code, and local use."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["html", "pdf", "slides", "presentation", "playwright", "export"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "playwright>=1.40",
  "pypdf>=4.0",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.9",
]

[project.urls]
Repository = "https://github.com/yuanmu97/html-slides-to-pdf"
Issues = "https://github.com/yuanmu97/html-slides-to-pdf/issues"

[project.scripts]
html-slides-to-pdf = "html_to_pdf:run"

[tool.setuptools]
py-modules = ["html_to_pdf"]

[tool.setuptools.packages.find]
include = ["web"]
